cmake_minimum_required(VERSION 3.24)
project(wet24_to_publish)

set(CMAKE_CXX_STANDARD 11)

add_executable(wet24_to_publish main.cpp hashTable.h hashTable.cpp AVL.h Team.h Team.cpp Player.cpp LinkedList.h LinkedList.cpp LinkedList.cpp LinkedList.cpp hashTable.cpp hashTable.cpp Pair.h Pair.cpp olympics24a2.cpp main24a2.cpp)
